# ompi

./: OpenMPI_Barrier_Analysis.md
docs/: gba_barrier_mpi_integration.md  gba_control_plane_initialization.md  switch_barrier_analysis.md
ompi/mca/coll/gba_barrier/: Makefile.am  coll_gba_barrier.h  coll_gba_barrier_component.c  coll_gba_barrier_control.c  coll_gba_barrier_module.c  owner.txt
ompi/mca/coll/switch_barrier/: Makefile.am  README.md  coll_switch_barrier.h  coll_switch_barrier_component.c  coll_switch_barrier_control_plane.c  coll_switch_barrier_iommu.c  coll_switch_barrier_module.c  owner.txt
